    * Modernized t/use.t and converted it from Test.pm to Test::More.
    * Add "use warnings;" to the core code and modernized it a little (there
    are still many issues left).

0.2.6:   Sat Apr  4 21:16:50 IDT 2009
    * Fixed the html-to-hd script to use HTML::Links::Localize instead of
    HTML::Hard::Disk.
        - https://rt.cpan.org/Ticket/Display.html?id=41518
 
0.2.5:    Sat Oct 14 13:27:21 IST 2006

    * Specified the license.
    * Added pod.t and pod-coverage.t
        - prefixed the inner functions with underscores
    * Added a Buile.PL file.
    * Added the examples directory

0.2.4:

    * Added the Changes file to the MANIFEST.

0.2.3:

    * Fixed a documentation bug that said HTML::Hard::Disk instead of 
    HTML::Links::Localize.