@@ -13,3 +13,4 @@ t/pod-coverage.t
 t/pod.t
 t/script1.t
 t/use.t
+META.json
