@@ -1,15 +1,19 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.32
+# Note: this file was auto-generated by Module::Build::Compat version 0.3800
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'HTML::Links::Localize',
-          'VERSION_FROM' => 'lib/HTML/Links/Localize.pm',
-          'PREREQ_PM' => {
-                           'HTML::Parser' => 0
-                         },
-          'INSTALLDIRS' => 'site',
-          'EXE_FILES' => [
-                           'html-to-hd'
-                         ]
-        )
+  'PL_FILES' => {},
+  'INSTALLDIRS' => 'site',
+  'NAME' => 'HTML::Links::Localize',
+  'EXE_FILES' => [
+                   'html-to-hd'
+                 ],
+  'VERSION_FROM' => 'lib/HTML/Links/Localize.pm',
+  'PREREQ_PM' => {
+                   'warnings' => 0,
+                   'strict' => 0,
+                   'Test::More' => 0,
+                   'HTML::Parser' => 0
+                 }
+)
 ;
