@@ -1,6 +1,7 @@
     * Modernized t/use.t and converted it from Test.pm to Test::More.
     * Add "use warnings;" to the core code and modernized it a little (there
     are still many issues left).
+    * Add some dependencies, resources and keywords to Build.PL.
 
 0.2.6:   Sat Apr  4 21:16:50 IDT 2009
     * Fixed the html-to-hd script to use HTML::Links::Localize instead of
